@@ -3,6 +3,11 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-10-24
+	build.xml: added "voc-jar" target to create org.mmisw.ont.vocabulary.jar to facilitate
+	the current updates in the voc2rdf project.
+	(note: these vocabularies could be located in an independed project).
+	
 2008-10-23
 	Paul:  Carlos, got an update: we're now using your table formatting, including CSS, on the
 	metadata table when we show ontologies. If you could change your output again (sorry) to 
